# gnss_scintillation

./: README.md  pyproject.toml
src/analysis/: scint_index.py
src/gnss_scintillation/: analyze.py  parse.py  utils.py
src/gnss_scintillation/analysis/: detrend.py
src/gnss_scintillation/parse/: parse_novatel.py  parse_septentrio.py  utils.py
