[project]
name = "gnss_scintillation"
version = "0.0.1"
authors = [
  { name="Leslie Lamarche", email="leslie.lamarche@sri.com" },
]
description = "Toolkit for working with ionospheric scintillation data collected from ground-based GNSS receivers."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
  "numpy>=1.21.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ljlamarche/gnss_scintillation"
"Bug Tracker" = "https://github.com/ljlamarche/gnss_scintillation/issues"
